CNCS Dev 12/src/objects/Concept_Papers__c.object
<CustomObject>
    <fields>
        <fullName>Status1__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>InProgress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengthening_Communities__c</fullName>
        <label>Strengthening Communities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <formula>$User.Telephone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Those_experiencing_homelessness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Those experiencing homelessness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unemployed_individuals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unemployed individuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_and_Military_Families__c</fullName>
        <label>Veterans and Military Families</label>
        <picklist>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access &amp; Attract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Veterans</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>$User.Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_organization_type__c</fullName>
        <label>What is your organization type?</label>
        <picklist>
            <picklistValues>
                <fullName>National Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National State Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community of Faith Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Municipality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Withdraw_Justification__c</fullName>
        <label>Withdraw Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you Currently or have you ever had a &quot;Fee for Service&quot; arrangement with youth corps  or conversation corps program?(Fee for Service is defined as an agreement in which organization pays fees or reimburses costs to services program in exchange for member or  team Support</description>
        <inlineHelpText>Do you Currently or have you ever had a &quot;Fee for Service&quot; arrangement with youth corps  or conversation corps program?(Fee for Service is defined as an agreement in which organization pays fees or reimburses costs to services program in exchange for membe</inlineHelpText>
        <label>Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yes_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <formula>$User.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_41__c</fullName>
        <formula>$User.Zip_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip+4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Concept Papers1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Concept Paper ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concept Papers1</pluralLabel>
    <recordTypes>
        <fullName>AmeriCorps_NCCC</fullName>
        <active>true</active>
        <description>AmeriCorps NCCC Concept Paper Package 1</description>
        <label>AmeriCorps NCCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_VISTA</fullName>
        <active>true</active>
        <description>AmeriCorps VISTA Concept Paper Package 1</description>
        <label>AmeriCorps VISTA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ameri_Test</fullName>
        <active>true</active>
        <label>Ameri Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Internal_User_cannot_Save</fullName>
        <active>true</active>
        <description>Internal User cannot Save Concept Papers</description>
        <errorConditionFormula>$Profile.Name = &quot;Program Officer&quot;</errorConditionFormula>
        <errorMessage>Internal User cannot Save records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Months_and_year_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(  Anticipated_Length_of_Project_in_Months__c ),
ISBLANK(  Anticipated_Length_of_Project_in_Years__c  ),
NOT(  $RecordType.DeveloperName  = &quot;AmeriCorps_NCCC&quot;))</errorConditionFormula>
        <errorMessage>Please Enter the Anticipated length of the Project (in Months or Years)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Months_and_year_cannot_be_filled</fullName>
        <active>true</active>
        <description>Anticipated Length should be filled Either in months or years</description>
        <errorConditionFormula>AND(
NOT($RecordType.DeveloperName =&quot;AmeriCorps_NCCC&quot;),
(NOT(ISBLANK( Anticipated_Length_of_Project_in_Months__c))), 
(NOT(ISBLANK( Anticipated_Length_of_Project_in_Years__c )))
)</errorConditionFormula>
        <errorMessage>Anticipated Length should be filled Either in Months or Years</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields</fullName>
        <active>true</active>
        <description>If you select new Project Director then Please fill First Name. Last Name, Phone and Email</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Choose_from_Existing_Project_Directors__c , &apos;None&apos;), 
ISBLANK(  First_Name__c ), 
ISBLANK(  Last_Name__c  ), 
ISBLANK(  Email__c  ), 
ISBLANK( Phone__c ))</errorConditionFormula>
        <errorDisplayField>First_Name__c</errorDisplayField>
        <errorMessage>If you select new Project Director then Please Mention the First Name. Last Name, Phone and Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields1</fullName>
        <active>true</active>
        <description>If you select new Project Title then Please fill Title, Address, Phone and Email</description>
        <errorConditionFormula>AND(
ISPICKVAL( Choose_from_Existing_Project_Title__c , &apos;None&apos;),
ISBLANK( Project_Title__c ),
ISBLANK( Project_Address__c  ),
ISBLANK( Email3__c  ),
ISBLANK( Phone_Number__c  ))</errorConditionFormula>
        <errorDisplayField>Project_Title__c</errorDisplayField>
        <errorMessage>If you select new Project Title then Please fill Title, Address, Phone and Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(  Have_you_previously_worked_with_NCCC__c  , &apos;yes&apos;), ISBLANK(  If_yes_when__c  ))</errorConditionFormula>
        <errorMessage>If Yes please enter &quot;How Many teams have served your organization?&quot; and &quot;When did a team most recently work with your organization?&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fee_for_service</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( Fee_For_Service__c ) = &quot;Yes&quot;,
ISBLANK( Description__c ))</errorConditionFormula>
        <errorMessage>If Yes please enter the value for &quot;NCCC has effectively been used in the past projects to augmentand support existing youth corps partnerships with organizations. Please describe how your plan to utilize NCCC will incorporate your existing partnership wit</errorMessage>
    </validationRules>
</CustomObject>